3 stage, git api show followers

--- a/httpService/src/app/app.component.html
+++ b/httpService/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-post-compoment></app-post-compoment>
+<!-- <app-post-compoment></app-post-compoment> -->
+<github-followers></github-followers>
+
